# Ssense

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt  run.sh  s.sh
apps/extension/: package.json  sidepanel.html  vite.config.ts
apps/extension/public/: content.css  manifest.json
apps/extension/src/background/: native-messaging.ts  service-worker.ts
apps/extension/src/content/: api-spoof.js  api-spoof.ts  dark-pattern-blocker.ts  extractor.ts
apps/extension/src/sidebar/: App.tsx
apps/extension/src/sidebar/components/: ChatInterface.tsx
apps/extension/src/types/: native-protocol.ts
apps/native-daemon/: Cargo.toml  com.ssense.daemon.json
apps/native-daemon/src/: main.rs  model_manager.rs
apps/native-daemon/src/cache/: mod.rs  sqlite_store.rs
apps/native-daemon/src/inference/: grammar.rs  hardware_profiler.rs  local_engine.rs  mod.rs
apps/native-daemon/src/messaging/: framing.rs  mod.rs  protocol.rs
docs/: ARCHITECTURE.md
libs/contracts/constants/: system_prompt.txt
libs/contracts/native-messaging/: protocol-spec.md
libs/contracts/schemas/: dpdp_schema.json
libs/rust-utils/: Cargo.toml
libs/rust-utils/src/: lib.rs
ml/data-forge/: build_tree.py  fetch_indian_seeds.py  fetch_real_policies.py  gan_forge.py  prepare_unsloth_data.py
ml/evals/: run_accuracy_evals.py  run_grammar_evals.py
ml/evals/holdout_policies/: ground_truth.json
ml/slm-training/: train_dpo.py  train_sft.py
scripts/: register-nmh.js
