[package]
name = "ssense-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

# CRITICAL FIX: Add tracing-appender for async file logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2" 

thiserror = "1.0"
anyhow = "1.0"
directories = "5.0"

rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true