[package]
name = "ssense-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & IO
tokio = { version = "1.38", features = ["full", "fs"] }
futures-util = "0.3" # Required for StreamExt in model_manager

# Serialization & Binary Framing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error Handling & OS Paths
thiserror = "1.0"
anyhow = "1.0"
directories = "5.0"

# Database & Hashing
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sha2 = "0.10"

# Hardware Profiling
sysinfo = "0.30"

# Network (Model Download)
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }

# Edge AI Engine
llama-cpp-rs = "0.1" 

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true